<resources>
    <string name="app_name">OSAPP</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_lgbutton">Login</string>
    <string name="osapp_login">OSAPP</string>
    <string name="register_username">Username</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="login_register_here_btn">Register Here!</string>
    <string name="add_nickname">Nickname</string>
    <string name="add_b">Add</string>
    <string name="nickname_add">Nickname</string>
    <string name="change">Change</string>
</resources>